-- Version 2.17.1, released ...

 * Some small usability improvements

-- Version 2.17.0, released 21-4-2023

 * WorldPainter now supports changing the lower build limit for Minecraft 1.18 and later map formats!
   + It can be changed when creating a new world, or from the Change Height screen (Edit menu), just like the upper build limit
   + It uses a data pack to implement the deviating build limit. Maps with deviating build limits may not load in newer versions of Minecraft!
   + The allowable range is between -2032 and 0, in steps of powers of two, just like the upper build limit
 * The annotations are no longer displayed in the 3D view if they are not configured to be Exported
 * You can now change the size of the render distance circle that you can activate with the "eye" toolbar button
   + Set the radius of the circle in chunks on the Configure View screen (Ctrl+V or View menu)
   + By default it is set to 12 chunks
 * Scripting: the full path to the directory containing the script file is now available as the `scriptDir` global variable
 * Some small bug fixes and error handling improvements

-- Version 2.16.0, released 12-3-2023

 * The material selection control has been simplified. Instead of always showing both legacy (numerical) and modern (name-based) choices it now only shows the appropriate choices for the currently selected map format
   + If you try to edit a material without a numerical ID with a map format selected that requires numerical IDs, an error message will be shown and you will be required to select a different, compatible material
 * The scale for importing height maps and masks, as well as the scale for overlay images, can now be specified with up to two decimals precision, for more accurate size control
 * Plants on the Custom Plants Layer settings screen are now disabled if they are not supported by the current map format