@@ -1,6 +1,7 @@
 -- Version 2.17.1, released ...
 
  * Some small usability improvements
+ * Bug fix: custom biomes from pre-1.17 maps are now correctly added to the Biomes panel when Importing a map from Minecraft, with arbitrary colours and named "Biome n" where n is the numerical biome ID
 
 -- Version 2.17.0, released 21-4-2023
 
